<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_18sdp"
            >

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/map_head"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_35ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                tools:context=".ui.register.MapsFragment"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintVertical_bias="0.6"/>

            <TextView
                android:id="@+id/map_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/time_head"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map"/>

            <TextView
                android:id="@+id/map_lat_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/lat_long"
                android:textAlignment="textStart"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/map_detail"/>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirm_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:alpha="0.55"
                android:background="@drawable/button_gradient"
                android:enabled="false"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/contin"
                android:textAllCaps="false"
                android:textColor="@color/primary_blue"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/bottom_text"/>


            <ProgressBar
                android:id="@+id/otp_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary_peach"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_25sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/_11ssp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
