<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

         <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                app:cardCornerRadius="15dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/secondary_lavender"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_18sdp"
                app:layout_constraintBottom_toBottomOf="@+id/app_title"
                android:contentDescription="@string/app_name" >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/login"
                    android:contentDescription="@string/app_name" />
            </androidx.cardview.widget.CardView>


            <TextView
                android:visibility="visible"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:textColor="@color/black"
                android:textAlignment="textEnd"
                android:textSize="@dimen/_5ssp"
                app:layout_constraintTop_toBottomOf="@id/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Unlock Your Journey"
                android:textColor="@color/black"
                android:textSize="@dimen/_15ssp"
                android:textStyle="bold"
                android:layout_marginHorizontal="@dimen/_10sdp"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text=" Easily Manage Your Bookings Anytime, Anywhere!"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:padding="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                app:layout_constraintTop_toTopOf="parent"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginHorizontal="@dimen/_18sdp"
                android:background="@drawable/button_light_gradient">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signup_btn"
                    android:visibility="gone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:alpha="0.55"
                    android:background="@drawable/border_dark"
                    android:enabled="false"
                    android:text="@string/signup"
                    android:textAllCaps="true"
                    android:textColor="@color/theme"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:layout_constraintTop_toBottomOf="@id/mobile" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/signin_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:enabled="false"
                    android:background="@drawable/button_dark_gradient"
                    android:paddingVertical="@dimen/_10sdp"
                    android:text="@string/signin"
                    android:textAllCaps="true"
                    android:textColor="@color/primary_blue"
                    android:textSize="@dimen/_12ssp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    app:layout_constraintTop_toBottomOf="@id/mobile" />

                </LinearLayout>

            <ProgressBar
                android:id="@+id/login_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/primary_peach"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/login_btn"
                app:layout_constraintEnd_toEndOf="@id/login_btn"
                app:layout_constraintStart_toStartOf="@id/login_btn"
                app:layout_constraintTop_toTopOf="@id/login_btn" />


        </LinearLayout>
         <TextView
                android:id="@+id/bottom_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_10sdp"
                android:ellipsize="marquee"
                android:singleLine="true"
                android:text="@string/compy"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_8ssp"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </ScrollView>
</layout>